public class AquaAnimal extends Animal {
    private String species;
    private int count;
    public String getSpecies() { return species; }
    public int getCount() { return count; }
}
