public enum CropFamily { CEREAL, VEGETABLE, FRUIT }
