public enum Family { RUMINANT, POULTRY }
