public interface FeedingProgram {
    String getFeedType();
    double getQuantityPerMeal();
    String getSchedule();
}
