public class GPSCollar extends Sensor {
    private Animal animal;
    public Animal getAnimal() { return animal; }
    @Override public Reading sendReading() { return null; }
}
