public enum GrowthStatus { SOWING, GERMINATION, GROWTH, MATURITY, HARVEST }
