public enum HealthStatus { HEALTHY, SICK, QUARANTINED }
