public class NumericalReading extends Reading {
    private double value;
    private String unit;

    public double getValue() { return value; }
    public String getUnit() { return unit; }
}
