public interface Range {
    double getMin();
    double getMax();
    boolean isInRange(double value);
}
