public enum ReadingStatus { NORMAL, WARNING, CRITICAL }
