public enum SType { ENVIRONMENTAL, SOIL, BIOMETRIC, GPS, WATER }
