public enum SeverityLevel { WARNING, CRITICAL }
