public class SoilSensor extends Sensor {
    @Override public Reading sendReading() { return null; }
}
