public enum StatusSensor { ACTIVE, FAULTY, SUSPENDED }
